--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <ul class="nav navbar-nav">
       <li><a href="/">Home</a></li>
       <li class="dropdown">
@@ -52,6 +52,20 @@
         <ul class="dropdown-menu" role="menu">
         {% for p in site.pages %}
         {% if p.section == "deployment" %}
+          <li><a href="{{ p.url }}">{{ p.title }}</a></li>
+        {% endif %}
+        {% endfor %}
+        </ul>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          Fedora.next <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+        {% for p in site.pages %}
+        {% if p.section == "fedoranext" %}
           <li><a href="{{ p.url }}">{{ p.title }}</a></li>
         {% endif %}
         {% endfor %}
