--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,65 +12,26 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <ul class="nav navbar-nav">
-      <li><a href="/">Home</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-          Tools <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-        {% for p in site.pages %}
-        {% if p.section == "tools" %}
-          <li><a href="{{ p.url }}">{{ p.title }}</a></li>
-        {% endif %}
-        {% endfor %}
-        </ul>
+      <li class="{% if page.highlight_section == "home" %} active {%endif%}">
+        <a href="/">Home</a>
       </li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-          Technology <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-        <li class="dropdown-header">Languages</li>
-        {% for p in site.pages %}
-        {% if p.section == "tech-languages" %}
-          <li><a href="{{ p.url }}">{{ p.title }}</a></li>
-        {% endif %}
-        {% endfor %}
-        <li role="separator" class="divider"></li>
-        <li class="dropdown-header">Database</li>
-        {% for p in site.pages %}
-        {% if p.section == "tech-database" %}
-          <li><a href="{{ p.url }}">{{ p.title }}</a></li>
-        {% endif %}
-        {% endfor %}
-        </ul>
+      <li class="{% if page.highlight_section == "tools" %} active {%endif%}">
+        <a href="/tools.html">Tools</a>
       </li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-          Deployment <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-        {% for p in site.pages %}
-        {% if p.section == "deployment" %}
-          <li><a href="{{ p.url }}">{{ p.title }}</a></li>
-        {% endif %}
-        {% endfor %}
-        </ul>
+      <li class="{% if page.highlight_section == "tech" %} active {%endif%}">
+        <a href="/tech.html">Technology</a>
       </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-          Fedora.next <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-        {% for p in site.pages %}
-        {% if p.section == "fedoranext" %}
-          <li><a href="{{ p.url }}">{{ p.title }}</a></li>
-        {% endif %}
-        {% endfor %}
-        </ul>
+      <li class="{% if page.highlight_section == "deployment" %} active {%endif%}">
+        <a href="/deployment.html">Deployment</a>
       </li>
+      <!--
+      <li class="{% if page.highlight_section == "resources" %} active {%endif%}">
+        <a href="/">Resources</a>
+      </li>
+      <li class="{% if page.highlight_section == "blogs" %} active {%endif%}">
+        <a href="/">Blogs</a>
+      </li>
+      -->
     </ul>
   </div>
 </nav>
