--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,11 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-  <link href="/static/css/patternfly.min.css" rel="stylesheet" media="screen, print">
-  <script src="/static/components/jquery/dist/jquery.min.js"></script>
+  <link href="/css/main.css" rel="stylesheet" media="screen, print">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  
+<!--  <link href="/static/css/patternfly.min.css" rel="stylesheet" media="screen, print"> -->
+  <script src="/static/components/jquery/dist/jquery.min.js"></script> 
   <script src="/static/components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/static/components/datatables/media/js/jquery.dataTables.js"></script>
   <script src="/static/js/patternfly.min.js"></script>
