--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,83 @@
 /**
  * Site header
  */
+ 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300);
+ 
+/* Splash gradient background */
+#splash {
+  background: rgb(60, 109, 179) !important;
+  background: -moz-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
+  background: -webkit-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
+  background: -o-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
+  background: -ms-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
+  background: linear-gradient(180deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
+  min-height: 370px;
+  background-image: url('/static/img/splash_union.png') !important;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 100%;
+}
+
+#splash h1 {
+  font-family: "Open Sans Semibold";
+  text-shadow: 0px 3px 1px rgba(37, 58, 102, 1);
+}
+
+/***
+ * Site nav
+ */
+ 
+#top {
+   padding-top: 20px;
+}
+
+#logo-col img {
+  float: left;
+}
+ 
+#splash nav a, #splash {
+  color: white;
+}
+
+#splash nav a {
+  font-size: 1.2em;
+}
+
+#splash nav a:hover {
+  text-decoration: underline;
+  background-color: transparent !important;
+}
+
+.btn.glyphicon {
+  margin-top: -2px !important;
+}
+
+#splash #search {
+  margin-top: 10px !important;
+}
+
+#banner > div {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#banner {
+  font-size: 1.5em;
+  text-align: center;
+  padding: 50px 100px;
+}
+
+#attribution, #attribution a {
+  color: white;
+  font-size: .9em;
+  margin-top: 32px;
+}
+
+#attribution {
+  opacity: .3;
+}
+ 
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
