more progress on mockup to html/css conversion

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -311,3 +311,13 @@
         }
     }
 }
+
+h3 {
+  margin-top: 1.2em;
+  margin-bottom: 1.6em;
+}
+
+h3 a, h3 a:visited {
+  color: $fedora-blue;
+  font-weight: semibold;
+}
