--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,8 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$fedora-dark-blue: #294172;
+$fedora-blue:      #3c6eb4;
 
 
 // Using media queries with like this:
