refining in-page nav area + adding front page banners area

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,6 +8,7 @@
     <div class="container">
       {{ content }}
     </div>
+	{% include banners.html %}
     {% include footer.html %}
   </body>
 </html>
