adding blog features area

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,6 +9,8 @@
       {{ content }}
     </div>
 	{% include banners.html %}
+	{% include blog-features.html %}
+	{% include blog-headlines.html %}
     {% include footer.html %}
   </body>
 </html>
