adding more styles to the blog headlines area

--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -1,5 +1,5 @@
 <div class="container banner" id="devassistant">
-  <div class="row text-center">
+  <div class="row">
     <div class="col-sm-5">
 	  <img src="/static/img/banners/banner_devassistant.png">
     </div>
