--- a/_includes/blog-features.html
+++ b/_includes/blog-features.html
@@ -1,5 +1,5 @@
 <div class="container" id="blog-features">
-  <div class="row text-center">
+  <div class="row">
     <article class="col-sm-6 feature-article">
 	  <h2>From Our Blog</h2>
 	  <h3>How to find and fix memory links in your Java Application</h3>
