--- a/_includes/blog-headlines.html
+++ b/_includes/blog-headlines.html
@@ -1,20 +1,37 @@
-<div class="container" id="blog-features">
-  <div class="row text-center">
-    <article class="col-sm-6 feature-article">
-	  <h2>From Our Blog</h2>
-	  <h3>How to find and fix memory links in your Java Application</h3>
-	  <p class="byline">by <span class="author">Leo Ufimstev</span></p>
-	  <p class="date"></p>
-	  <p>Do you have a Java application that runs  fine at first but slows down after a while, or it runs fine for a small number of files but performance degrades for large number of files? Maybe you have a memory leak.</p>
-	  <p>Read more ...</p>
-    </article>
-    <article class="col-sm-6 feature-article">
-      <h2>From Our Blog</h2>
-      <h3>What Lies Beneath: A tour of the dark gritty underbelly of OpenJDK</h3>
-      <p class="byline">by <span class="author">Andrew Dinn</span></p>
-      <p class="date"></p>
-      <p>OpenJDK is the premier open source Java implementation. The OpenJDK project provides the code used to build Red Hat’s  Java releases for Fedora and RHEL and the Java releases used on most other Linux distributions. It also forms the basis of Oracle’s proprietary Java binary releases. The Red Hat OpenJDK team has been working for some time now, along with organizations like the London Java Community (LJC) and some of our academic partners (e.g. Glasgow & Manchester)...</p>
-	  <p>Read more ...</p>
-    </article>
+<div class="container" id="blog-headlines">
+  <div class="row">
+	  <div class="col-sm-12">
+	  	  <h2>Other headlines from our blog</h2>
+	  </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 blog-headlines">
+	  <article>
+		<h3>Dirty Tricks: Launching a helper process under memory and latency constraints (pthread_create and vfork)</h3>
+		<p>You need to launch a helper process, and while Linux’s fork is copy-on-write (COW), the page tables still need to be duplicated, and for a large virtual address space that...</p>
+		<p>Read more ...</p>
+		<p class="byline">by <span class="author">Carlos O'Donnell</span> <span class="date">August 19, 2015</span></p>
+	  </article>
+	  <article>
+		<h3>Repost: Developing process-enabled applications with BPA and BPM tools</h3>
+		<p>Developing business process-enabled applications can be messy—with numerous stakeholders using separate business process analysis (BPA) and business process...</p>
+		<p>Read more ...</p>
+		<p class="byline">by <span class="author">Eric D. Schabell</span> <span class="date">August 5, 2015</span></p>
+	  </article>
+    </div>
+    <div class="col-sm-6 blog-headlines">
+      <article>
+		<h3>DZone guide to the Internet of Things</h3>
+		<p>Interested in IoT?  Dzone has done a great job assembling this guide, but I’m also pleased that they’ve included my section, IoT Gateways and Architectures...</p>
+		<p>Read more ...</p>
+		<p class="byline">by <span class="author">Henryk Konsek</span> <span class="date">August 24, 2015</span></p>
+	  </article>
+	  <article>
+		<h3>4 Steps to Maximize Your DevOps and Agile Results</h3>
+		<p>It still amazes me how, after all the time and effort spent trying to figure out how to manage and execute technology projects, that some fundamental issues still remain...</p>
+		<p>Read more ...</p>
+		<p class="byline">by <span class="author">Matt Lyteson</span> <span class="date">August 20, 2015</span></p>
+	  </article>
+    </div>
   </div>
 </div>
