refinement on typography treatments and stlying for blog blocks

--- a/_includes/blog-features.html
+++ b/_includes/blog-features.html
@@ -1,20 +1,20 @@
 <div class="container" id="blog-features">
   <div class="row">
     <article class="col-sm-6 feature-article">
-	  <h2>From Our Blog</h2>
-	  <h3>How to find and fix memory links in your Java Application</h3>
+	  <h2><span>From Our Blog</span></h2>
+	  <h3><a href="#">How to find and fix memory links in your Java Application</a></h3>
 	  <p class="byline">by <span class="author">Leo Ufimstev</span></p>
-	  <p class="date"></p>
+	  <p class="date">August 14, 2015</p>
 	  <p>Do you have a Java application that runs  fine at first but slows down after a while, or it runs fine for a small number of files but performance degrades for large number of files? Maybe you have a memory leak.</p>
-	  <p>Read more ...</p>
+	  <p><a href="#">Read more ...</a></p>
     </article>
     <article class="col-sm-6 feature-article">
-      <h2>From Our Blog</h2>
-      <h3>What Lies Beneath: A tour of the dark gritty underbelly of OpenJDK</h3>
+      <h2><span>From Our Blog</span></h2>
+      <h3><a href="#">What Lies Beneath: A tour of the dark gritty underbelly of OpenJDK</a></h3>
       <p class="byline">by <span class="author">Andrew Dinn</span></p>
-      <p class="date"></p>
+      <p class="date">August 4, 2015</p>
       <p>OpenJDK is the premier open source Java implementation. The OpenJDK project provides the code used to build Red Hat’s  Java releases for Fedora and RHEL and the Java releases used on most other Linux distributions. It also forms the basis of Oracle’s proprietary Java binary releases. The Red Hat OpenJDK team has been working for some time now, along with organizations like the London Java Community (LJC) and some of our academic partners (e.g. Glasgow & Manchester)...</p>
-	  <p>Read more ...</p>
+	  <p><a href="#">Read more ...</a></p>
     </article>
   </div>
 </div>
