--- a/_includes/blog-headlines.html
+++ b/_includes/blog-headlines.html
@@ -1,37 +1,39 @@
 <div class="container" id="blog-headlines">
+  <div class="container">
   <div class="row">
 	  <div class="col-sm-12">
-	  	  <h2>Other headlines from our blog</h2>
+	  	  <h2><span>Other headlines from our blog</span></h2>
 	  </div>
   </div>
   <div class="row">
     <div class="col-sm-6 blog-headlines">
 	  <article>
-		<h3>Dirty Tricks: Launching a helper process under memory and latency constraints (pthread_create and vfork)</h3>
+		<h3><a href="#">Dirty Tricks: Launching a helper process under memory and latency constraints (pthread_create and vfork)</a></h3>
 		<p>You need to launch a helper process, and while Linux’s fork is copy-on-write (COW), the page tables still need to be duplicated, and for a large virtual address space that...</p>
-		<p>Read more ...</p>
+		<p><a href="#">Read more ...</a></p>
 		<p class="byline">by <span class="author">Carlos O'Donnell</span> <span class="date">August 19, 2015</span></p>
 	  </article>
 	  <article>
-		<h3>Repost: Developing process-enabled applications with BPA and BPM tools</h3>
+		<h3><a href="#">Repost: Developing process-enabled applications with BPA and BPM tools</a></h3>
 		<p>Developing business process-enabled applications can be messy—with numerous stakeholders using separate business process analysis (BPA) and business process...</p>
-		<p>Read more ...</p>
+		<p><a href="#">Read more ...</a></p>
 		<p class="byline">by <span class="author">Eric D. Schabell</span> <span class="date">August 5, 2015</span></p>
 	  </article>
     </div>
     <div class="col-sm-6 blog-headlines">
       <article>
-		<h3>DZone guide to the Internet of Things</h3>
+		<h3><a href="#">DZone guide to the Internet of Things</a></h3>
 		<p>Interested in IoT?  Dzone has done a great job assembling this guide, but I’m also pleased that they’ve included my section, IoT Gateways and Architectures...</p>
-		<p>Read more ...</p>
+		<p><a href="#">Read more ...</a></p>
 		<p class="byline">by <span class="author">Henryk Konsek</span> <span class="date">August 24, 2015</span></p>
 	  </article>
 	  <article>
-		<h3>4 Steps to Maximize Your DevOps and Agile Results</h3>
+		<h3><a href="#">4 Steps to Maximize Your DevOps and Agile Results</a></h3>
 		<p>It still amazes me how, after all the time and effort spent trying to figure out how to manage and execute technology projects, that some fundamental issues still remain...</p>
-		<p>Read more ...</p>
+		<p><a href="#">Read more ...</a></p>
 		<p class="byline">by <span class="author">Matt Lyteson</span> <span class="date">August 20, 2015</span></p>
 	  </article>
     </div>
+  </div>
   </div>
 </div>
