--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -1,4 +1,5 @@
 <div class="container banner" id="devassistant">
+  <div class="container">	
   <div class="row">
     <div class="col-sm-5">
 	  <img src="/static/img/banners/banner_devassistant.png">
@@ -8,5 +9,6 @@
       <p>DevAssistant can help you set up your development environment, publish your code, and do many of the chores that somehow keep you from the important stuff - writing your software.</p>
       <p><a href="#">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
     </div>
+  </div>
   </div>
 </div>
