more descriptive main nav item names, dropping home bc logo is there for home link

--- a/_includes/header-front.html
+++ b/_includes/header-front.html
@@ -10,20 +10,17 @@
     <div class="col-sm-8">
 	  <nav>	
         <ul class="nav navbar-nav">
-          <li class="{% if page.highlight_section == "home" %} active {%endif%}">
-            <a href="/">Home</a>
-          </li>
           <li class="{% if page.highlight_section == "start" %} active {%endif%}">
-            <a href="/start.html">Start</a>
+            <a href="/start.html">Start A Project</a>
           </li>
           <li class="{% if page.highlight_section == "tools" %} active {%endif%}">
-            <a href="/tools.html">Tools</a>
+            <a href="/tools.html">Get Tools</a>
           </li>
           <li class="{% if page.highlight_section == "tech" %} active {%endif%}">
-            <a href="/tech.html">Technology</a>
+            <a href="/tech.html">Technology Overview</a>
           </li>
           <li class="{% if page.highlight_section == "deployment" %} active {%endif%}">
-            <a href="/deployment.html">Deployment</a>
+            <a href="/deployment.html">Deploy Your Project</a>
           </li>
           <!--
           <li class="{% if page.highlight_section == "resources" %} active {%endif%}">
