--- a/_layouts/general.html
+++ b/_layouts/general.html
@@ -5,6 +5,7 @@
 
   <body>
     {% include header.html %}
+    {% include title.html %}
     <div class="container">
       {{ content }}
     </div>
