--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,9 +29,9 @@
   }
 }
 
-.title#start { 
-  background-image: url('/static/img/titles/title_start.png') !important; 
-}
+.title#start {   background-image: url('/static/img/titles/title_start.png') !important; }
+.title#tools {   background-image: url('/static/img/titles/title_tools.png') !important; }
+.title#tech {   background-image: url('/static/img/titles/title_tech.png') !important; }
 
 #splash, .title, #header {
   margin-left: 0px !important;
