--- a/_layouts/general.html
+++ b/_layouts/general.html
@@ -5,7 +5,23 @@
 
   <body>
     {% include header.html %}
-    {% include title.html %}
+	<div class="title container" id="{{ page.category-name }}">
+	  <div class="container">
+		<div class="row">
+		  <div class="col-sm-4">
+			<h1>{{ page.title }}</h1>
+		  </div>
+		  <div class="col-sm-8">
+			<p>{{ page.description }}</p>
+		  </div>
+		</div>
+		<div class="row" id="attribution">
+		  <div class="col-sm-12">	
+			<a href="{{ page.photo-link }}">{{ page.attribution }}</a>
+		  </div>
+		</div>
+	  </div>
+	</div>
     <div class="container">
       {{ content }}
     </div>
