adding dynamic title / heade rimage for tech overview and deployment tabs

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,6 +32,8 @@
 .title#start {   background-image: url('/static/img/titles/title_start.png') !important; }
 .title#tools {   background-image: url('/static/img/titles/title_tools.png') !important; }
 .title#tech {   background-image: url('/static/img/titles/title_tech.png') !important; }
+.title#deploy {   background-image: url('/static/img/titles/title_deploy.png') !important; }
+
 
 #splash, .title, #header {
   margin-left: 0px !important;
