--- a/_layouts/general.html
+++ b/_layouts/general.html
@@ -8,16 +8,16 @@
 	<div class="title container" id="{{ page.category-name }}">
 	  <div class="container">
 		<div class="row">
-		  <div class="col-sm-5">
+		  <div class="col-sm-6" id="page-title">
 			<h1>{{ page.title }}</h1>
 		  </div>
-		  <div class="col-sm-7">
+		  <div class="col-sm-6" id="page-description">
 			<p>{{ page.description }}</p>
 		  </div>
 		</div>
-		<div class="row" id="attribution">
-		  <div class="col-sm-12">	
-			<a href="{{ page.photo-link }}">{{ page.attribution }}</a>
+		<div class="row">
+		  <div class="col-sm-12">
+		    <p><a id="attribution" href="{{ page.photo-link }}">{{ page.attribution }}</a></p>
 		  </div>
 		</div>
 	  </div>
