tweaks to fonts / alignment / layout on start page to better match mockups

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -40,10 +40,11 @@ ul, ol, dl, figure,
 /**
  * Images
  */
-img {
-    max-width: 100%;
-    vertical-align: middle;
-}
+/*img {
+ *    max-width: 100%;
+ *    vertical-align: middle;
+ * }
+*/
 
 
 
