--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -449,3 +449,43 @@ h3 a, h3 a:visited {
     margin-top: -8px;
   }
 }
+
+
+h2 {
+  font-size: 1.5em !important;
+  font-weight: 700;
+  color: #888;
+  padding-bottom: 14px;
+  padding-top: 14px;
+}
+
+.panel {
+
+  min-height: 150px;
+
+  h2 {
+  font-weight: normal !important;
+  color: #337ab7;
+  display: table-cell !important;
+  padding-top: 8px;
+  padding-left: 7px;
+  }
+  
+  p {
+    color: #888;
+    margin-left: 10px;
+  }
+  
+  p:hover {
+    text-decoration: none;
+  }
+  
+  .panel-link:hover {
+    text-decoration: none !important;
+  }
+
+  .panel-link:hover h2 {
+    text-decoration: underline;
+  }
+
+}
