--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -463,17 +463,20 @@ h2 {
 
   min-height: 150px;
 
-  h2 {
+  h3 {
+  font-size: 1.4em !important;
   font-weight: normal !important;
   color: #337ab7;
   display: table-cell !important;
   padding-top: 8px;
-  padding-left: 7px;
+  padding-left: 8px;
+  padding-bottom: 10px;
   }
   
   p {
     color: #888;
     margin-left: 10px;
+    
   }
   
   p:hover {
@@ -485,7 +488,7 @@ h2 {
 .panel-link:hover {
   text-decoration: none !important;
   
-  h2 {
+  h3 {
     text-decoration: underline;
   }
 }
