adding padding to footter

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -204,6 +204,11 @@
 /**
  * Site footer
  */
+ 
+ footer {
+   margin-top: 80px;
+ }
+ 
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
