--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -496,4 +496,11 @@ h2 {
   h3 {
     text-decoration: underline;
   }
+  
+  .panel-default {
+    border-top-color: #337ab7;
+    border-right-color: #337ab7;
+    border-bottom-color: #337ab7;
+    border-left-color: #337ab7;
+  }
 }
