adjusting title graphic area to be a bit wider

--- a/_layouts/general.html
+++ b/_layouts/general.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="row">
 		  <div class="col-sm-12">
-		    <p><a id="attribution" href="{{ page.photo-link }}">{{ page.attribution }}</a></p>
+		    <p id="attribution"><a href="{{ page.photo-link }}">{{ page.attribution }}</a></p>
 		  </div>
 		</div>
 	  </div>
