cleaning up the deployment page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,7 +32,10 @@
 .title#start {   background-image: url('/static/img/titles/title_start.png') !important; }
 .title#tools {   background-image: url('/static/img/titles/title_tools.png') !important; }
 .title#tech {   background-image: url('/static/img/titles/title_tech.png') !important; }
-.title#deploy {   background-image: url('/static/img/titles/title_deploy.png') !important; }
+.title#deploy {   
+  background-image: url('/static/img/titles/title_deploy.png') !important;
+  background-position: right 20% !important; 
+}
 
 .title {
   height: 180px;
