--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-md-2">
           <div class="widget-body">
-            <a href="http://www.redhat.com/"><img alt="Red Hat Logo" src="/static/images/sponsors/sidebar/redhat.png" class="rh-logo"></a>
+            <a href="http://www.redhat.com/"><img alt="Red Hat Logo" src="/static/logo/redhat.png" class="rh-logo"></a>
           </div>
         </div>
         <div class="col-md-7">
