--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,18 @@
 
   <body>
     {% include header.html %}
+    <div class="title container" id="{{ page.category-name }}">
+      <div class="container">
+	    <div class="row">
+		  <div class="col-sm-6" id="page-title">
+	        <h1>{{ page.title }}</h1>
+		  </div>
+		  <div class="col-sm-6" id="page-description">
+		    <p>{{ page.description }}</p>
+	      </div>
+	    </div>
+      </div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-9">
