--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,6 +17,7 @@
   background: -ms-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
   background: linear-gradient(180deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
   background-image: url('/static/img/titles/title_front.png') !important;
+  background-size: cover !important;
   
   h1 {
     font-family: "Open Sans Semibold";
