--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@
 
   <body>
     {% include header.html %}
-    <div class="title container" id="{{ page.category-name }}">
+    <div class="title container" id="{{ page.section }}">
       <div class="container">
 	    <div class="row">
 		  <div class="col-sm-1" id="page-logo">
