--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,13 +1,13 @@
 /**
  * Site header
  */
- 
+
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300);
 
 #logo-col img {
   margin-bottom: 15px;
 }
- 
+
 /* Splash gradient background */
 #splash, .title {
   background: rgb(60, 109, 179) !important;
@@ -18,13 +18,13 @@
   background: linear-gradient(180deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
   background-image: url('/static/img/titles/title_front.png') !important;
   background-size: cover !important;
-  
+
   h1 {
     font-family: "Open Sans Semibold";
     text-shadow: 0px 3px 1px rgba(37, 58, 102, 1);
     color: white;
   }
-  
+
   p {
     color: white;
   }
@@ -33,9 +33,9 @@
 .title#start {   background-image: url('/static/img/titles/title_start.png') !important; }
 .title#tools {   background-image: url('/static/img/titles/title_tools.png') !important; }
 .title#tech {   background-image: url('/static/img/titles/title_tech.png') !important; }
-.title#deploy {   
+.title#deploy {
   background-image: url('/static/img/titles/title_deploy.png') !important;
-  background-position: right 20% !important; 
+  background-position: right 20% !important;
 }
 
 .title {
@@ -51,7 +51,7 @@
 
   #page-title {
   padding-top: 10px;
-  } 
+  }
 }
 
 
@@ -66,9 +66,21 @@
 }
 
 /***
+ * Site search
+ */
+.entries {
+  position: absolute;
+  background: white;
+  top: 55px;
+  left: 0px;
+  right: 0px;
+  z-index: 10;
+}
+
+/***
  * Site nav
  */
- 
+
 #top {
    padding-top: 20px;
 }
@@ -76,7 +88,7 @@
 #logo-col img {
   float: left;
 }
- 
+
 #splash nav a, #splash {
   color: white;
 }
@@ -112,7 +124,7 @@
 #attribution {
 
   padding-top: 40px;
-  
+
   a {
     color: white;
     font-size: .9em;
@@ -122,7 +134,7 @@
 #attribution {
   opacity: .3;
 }
- 
+
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
@@ -213,11 +225,11 @@
 /**
  * Site footer
  */
- 
+
  footer {
    margin-top: 80px;
  }
- 
+
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
@@ -291,7 +303,7 @@
     padding-left: 0;
     padding-right: 0;
     padding-top: 30px;
-    font-family: "Open sans"; 
+    font-family: "Open sans";
 
   .widget-title {
     color: #8d8d8d;
@@ -411,7 +423,7 @@ h3 a, h3 a:visited {
   margin-left: 0;
   margin-right: 0;
   height: 240px;
-  
+
   .banner-body {
     padding: 32px 5px 24px 5px;
   }
@@ -424,7 +436,7 @@ h3 a, h3 a:visited {
 .banner#devassistant {
   background-image: url('/static/img/noisy_grid.png') !important;
   background-repeat: repeat;
-  
+
   p,h2 {
 	text-align: left;
   }
@@ -454,22 +466,22 @@ h3 a, h3 a:visited {
     color: white;
     padding-bottom: 0px;
   }
-  
+
   h2 {
   font-size: 2.2em !important;
   padding-bottom: 0px;
   }
-  
+
   h3 {
     font-face: "Open Sans" !important;
     font-weight: 600 !important;
     font-size: 150%;
   }
-  
+
   p {
     color: #a5a8aa;
   }
-  
+
   p.byline {
     color: #6f7276;
   }
@@ -480,13 +492,13 @@ h3 a, h3 a:visited {
   p {
     color: #6f7276;
   }
-  
+
   p.byline {
     color: #60605b;
     font-size: 14pt;
     margin-top: -8px;
   }
-  
+
   p.date {
     font-style: italic;
     color: #a5a8aa;
@@ -515,26 +527,26 @@ h2 {
   padding-left: 8px;
   padding-bottom: 10px;
   }
-  
+
   p {
     color: #888;
     margin-left: 10px;
-    
+
   }
-  
+
   p:hover {
     text-decoration: none;
   }
-  
+
 }
-  
+
 .panel-link:hover {
   text-decoration: none !important;
-  
+
   h3 {
     text-decoration: underline;
   }
-  
+
   .panel-default {
     border-top-color: #337ab7;
     border-right-color: #337ab7;
