--- a/_includes/blog-headlines.html
+++ b/_includes/blog-headlines.html
@@ -1,3 +1,4 @@
+<!-- BLOG_HEADLINES_START -->
 <div class="container" id="blog-headlines">
   <div class="container">
   <div class="row">
@@ -37,3 +38,4 @@
   </div>
   </div>
 </div>
+<!-- BLOG_HEADLINES_END -->
