--- a/_includes/header-front.html
+++ b/_includes/header-front.html
@@ -1,3 +1,12 @@
+<div style="background-color: #333">
+<div class="container">
+<div style="margin-bottom: 6px; margin-top: 6px" class="alert alert-warning">
+<span class="pficon pficon-warning-triangle-o"></span>
+  <strong> This is a development server. </strong>
+  See the <a href="https://fedoraproject.org/wiki/Websites/Developer"> project wiki </a> for more information.
+</div>
+</div>
+</div>
 <div class="container" id="splash">
   <div class="row" id="top">
     <div class="col-sm-2" id="logo-col">
@@ -44,8 +53,8 @@
   </div>
   <div class="row" id="banner">
 	  <div class="col-sm-12">
-		<h1>Take control of your world. Build it with Fedora.</h1>
-		<p>Build your software using truly open and powerful technology backed by the upstream open source community. Do more with your devices than the manufacturers ever dared dream.</p>
+		<h1>Fedora as a workstation for developers.</h1>
+		<p>Doesn't matter if you do web, mobile apps, or anything else. You can do it with Fedora easily.</p>
 	  </div>
   </div>
   <div class="row" id="attribution">
