--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,13 @@
+<div style="background-color: #333">
+<div class="container">
+<div style="margin-bottom: 6px; margin-top: 6px" class="alert alert-warning">
+<span class="pficon pficon-warning-triangle-o"></span>
+  <strong> This is a development server. </strong>
+  See the <a href="https://fedoraproject.org/wiki/Websites/Developer"> project wiki </a> for more information.
+</div>
+</div>
+</div>
+
 <div class="container" id="header">
   <div class="row" id="top">
     <div class="col-sm-2" id="logo-col">
