modifying front page banner text for better flow / grammar

--- a/_includes/header-front.html
+++ b/_includes/header-front.html
@@ -48,8 +48,8 @@
   </div>
   <div class="row" id="banner">
 	  <div class="col-sm-12">
-		<h1>Fedora as a workstation for developers.</h1>
-		<p>Doesn't matter if you do web, mobile apps, or anything else. You can do it with Fedora easily.</p>
+		<h1>Fedora is the developer workstation you've been waiting for.</h1>
+		<p>From mobile apps to web; from desktop GUIs to CLI tools. Create it all easily with Fedora.</p>
 	  </div>
   </div>
   <div class="row" id="attribution">
