--- a/_includes/header-front.html
+++ b/_includes/header-front.html
@@ -48,7 +48,7 @@
   </div>
   <div class="row" id="banner">
 	  <div class="col-sm-12">
-		<h1>Fedora is the developer workstation you've been waiting for.</h1>
+		<h1>The developer workstation you've been waiting for.</h1>
 		<p>From mobile apps to web; from desktop GUIs to CLI tools. Create it all easily with Fedora.</p>
 	  </div>
   </div>
