fix the page.html layout header to match mockup

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,20 +8,21 @@
     <div class="title container" id="{{ page.section }}">
       <div class="container">
 	    <div class="row">
-		  <div class="col-sm-1" id="page-logo">
+		  <div class="col-sm-2" id="page-logo">
                       {% for p in site.pages %}
                       {% if p.page == page.page %}
                         {% if p.section %}
-                          <img style="width:100px; padding-top: 30px; padding-right: 20px;" src="{{ p.page | page_logo }}">
+                      
+                          <img class="img-circle" style="background-color: white; padding: 6px; width:100px; margin-top: 30px; margin-right: 20px;" src="{{ p.page | page_logo }}">
                         {% endif %}
                       {% endif %}
                       {% endfor %}
 		  </div>	
-		  <div class="col-sm-5" id="page-title">
+		  <div class="col-sm-4" id="page-title">
                       {% for p in site.pages %}
                       {% if p.page == page.page %}
                         {% if p.section %}
-                          <h1>{{ p.title }}</h1>
+                          <h1 style="margin-top:30px">{{ p.title }}</h1>
                         {% endif %}
                       {% endif %}
                       {% endfor %}
