Test links in main navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
       <nav>
         <ul class="nav navbar-nav">
           <li class="{% if page.highlight_section == "start" %} active {%endif%}">
-            <a href="/start.html">Start A Project</a>
+            <a href="/start.html">Start a Project</a>
           </li>
           <li class="{% if page.highlight_section == "tools" %} active {%endif%}">
             <a href="/tools.html">Get Tools</a>
