--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,20 +5,20 @@
         <h3 class="widget-title">About</h3>
         <div class="widget-body">
           <dl>
-            <dd><a href="//fedoraproject.org/wiki/Overview">About Fedora</a></dd>
-            <dd><a href="/en/sponsors">Sponsors</a></dd>
+            <dd><a href="//getfedora.org/en/sponsors">About Fedora</a></dd>
+            <dd><a href="//getfedora.org/en/sponsors">Sponsors</a></dd>
             <dd><a href="http://fedoramagazine.org">Fedora Magazine</a></dd>
-            <dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">Legal</a></dd>
+            <dd><a href="//fedoraproject.org/wiki/Legal:Main#Legal">Legal</a></dd>
           </dl>
           <ul class="list-inline">
             <li>
-              <a class="btn-social btn-outline" href="https://www.facebook.com/TheFedoraProject"><i class="fa fa-fw fa-facebook"></i></a>
+              <a class="btn-social btn-outline" href="//www.facebook.com/TheFedoraProject"><i class="fa fa-fw fa-facebook"></i></a>
             </li>
             <li>
-              <a class="btn-social btn-outline" href="https://plus.google.com/112917221531140868607"><i class="fa fa-fw fa-google-plus"></i></a>
+              <a class="btn-social btn-outline" href="//plus.google.com/112917221531140868607"><i class="fa fa-fw fa-google-plus"></i></a>
             </li>
             <li>
-              <a class="btn-social btn-outline" href="https://twitter.com/fedora"><i class="fa fa-fw fa-twitter"></i></a>
+              <a class="btn-social btn-outline" href="//twitter.com/fedora"><i class="fa fa-fw fa-twitter"></i></a>
             </li>
           </ul>
         </div>
@@ -27,13 +27,13 @@
         <h3 class="widget-title uppercase">Download</h3>
         <div class="widget-body">
           <dl>
-            <dd><a href="/en/workstation/download">Get Fedora Workstation</a></dd>
-            <dd><a href="/en/server/download">Get Fedora Server</a></dd>
-            <dd><a href="/en/cloud/download">Get Fedora Cloud</a></dd>
+            <dd><a href="//getfedora.org/en/workstation/download">Get Fedora Workstation</a></dd>
+            <dd><a href="//getfedora.org/en/server/download">Get Fedora Server</a></dd>
+            <dd><a href="//getfedora.org/en/cloud/download">Get Fedora Cloud</a></dd>
             <dd><a href="//spins.fedoraproject.org">Fedora Spins</a></dd>
             <dd><a href="//labs.fedoraproject.org">Fedora Labs</a></dd>
             <dd><a href="//arm.fedoraproject.org">Fedora ARM<span class="sup">&reg;</span></a></dd>
-            <dd><a href="http://torrents.fedoraproject.org/">Torrent Downloads</a></dd>
+            <dd><a href="http://torrents.fedoraproject.org">Torrent Downloads</a></dd>
           </dl>
         </div>
       </div>
