Remove language select as there is only English available

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,18 +75,6 @@
             <p class="copy">&copy; 2015 Red Hat, Inc. and others.</p>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="widget-body">
-            <div class="pull-left language-header">
-              <span class="active uls-trigger lang-dropdown">Change Language</span>
-                <form class="lang-dropdown" id="langSelect" style="visibility:hidden" method="GET" action="">
-                  <input type="hidden" value="" id="selectedLang" name="lang">
-                    <!-- Allow uls script to change language through legacy system -->
-                    <input type="submit" value="OK">
-                </form>
-              </div>
-            </div>
-          </div>
-        </div> <!-- /row of widgets -->
+        <!-- /row of widgets -->
       </div>
 </footer>
