--- a/_includes/header-front.html
+++ b/_includes/header-front.html
@@ -11,9 +11,12 @@
   <div class="row" id="top">
     <div class="col-sm-2" id="logo-col">
       <div class="text-center">
-        <a href="/">
-          <img src="/static/logo_white.png" style="height: 46px; width: 152px;">
-        </a>
+        <h1>
+          <a href="/">
+            <img src="/static/logo_white.png" style="height: 46px; width: 152px;">
+            <span>Fedora Developer Portal</span>
+          </a>
+        </h1>
       </div>
     </div>
     <div class="col-sm-8">
